--- a/app/src/main/res/layout/activity_depense.xml
+++ b/app/src/main/res/layout/activity_depense.xml
@@ -7,69 +7,216 @@
     android:layout_height="match_parent"
     tools:context=".depense">
 
-    <EditText
-        android:id="@+id/expenses"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:background="@drawable/card_view"
+        android:padding="30dp">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-black"
+            android:text="Floussi"
+            android:textColor="#fff"
+            android:textSize="40dp"
+            android:textStyle="bold">
+
+        </TextView>
+
+
+        <RelativeLayout
+            android:id="@+id/search"
+            android:layout_width="188dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="200dp"
+            android:textColor="#f6cac1">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Balance"
+                android:textColor="#8f71ff"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/balanceD"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="40dp"
+                android:text="$12,593"
+                android:textColor="#03082b"
+                android:textSize="40dp" />
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp">
+
+            </ImageView>
+
+        </RelativeLayout>
+    </RelativeLayout>
+
+    <DatePicker
+        android:id="@+id/datePicker"
+        android:layout_width="match_parent"
+        android:layout_height="226dp"
+        android:layout_marginTop="250dp"
+        android:datePickerMode="spinner"
+        android:spinnersShown="false" />
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_marginTop="50dp"
-        android:hint="Expenses" />
+        android:layout_marginTop="250dp"
+        android:orientation="horizontal">
 
-    <EditText
-        android:id="@+id/cost"
-        android:layout_width="wrap_content"
+
+
+        <Button
+            android:id="@+id/buttonFix"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="220dp"
+            android:backgroundTint="#f6cac1"
+            android:text="Charge Fixe" />
+
+
+        <TextView
+            android:id="@+id/TxtFix"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
+            android:layout_marginLeft="220dp"
+            android:layout_marginTop="20dp"
+            android:textSize="20dp"
+            android:textColor="#f6cac1"
+            android:text="Charge Fixe" />
+
+        <Button
+            android:id="@+id/buttonVariable"
+            android:layout_width="150dp"
+            android:layout_height="60dp"
+            android:layout_marginLeft="20dp"
+            android:backgroundTint="#8f71ff"
+            android:text="Charge Variable" />
+
+        <TextView
+            android:id="@+id/TxtVariable"
+            android:layout_width="150dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:textSize="20dp"
+            android:textColor="#8f71ff"
+            android:text="Charge Variable" />
+
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_marginTop="100dp"
-        android:hint="Cost" />
+        android:layout_marginTop="300dp"
+        android:padding="30dp">
 
-    <EditText
+
+        <EditText
+            android:id="@+id/expenses"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="12"
+            android:hint="Expenses"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/cost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:ems="12"
+            android:hint="Cost" />
+
+    <TextView
         android:id="@+id/when"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:layout_marginTop="150dp"
-        android:hint="When" />
+        android:ems="12"
+        android:inputType="date"
+        android:layout_marginTop="110dp"
+        android:textSize="20sp"
+        android:hint="When : DefaultDate is Today" />
+
+        <Button
+            android:id="@+id/changedate"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="270dp"
+            android:layout_marginTop="100dp"
+            android:text="Change"
+            android:backgroundTint="#b1a7eb"
+            android:textSize="10sp"
+            android:textStyle="bold" />
+
+
+
 
 
 
     <Button
         android:id="@+id/save"
-        android:layout_width="90dp"
+        android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_marginLeft="200dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="160dp"
         android:text="Save"
-        android:textColor="@android:color/background_dark"
+        android:backgroundTint="#84a9fb"
         android:textSize="15sp"
         android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/GetDate"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="160dp"
+            android:text="GetDate"
+            android:backgroundTint="#84a9fb"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/second_activity_next_button"
-        android:layout_width="90dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="200dp"
-        android:layout_marginTop="400dp"
-        android:text="Next"
-        android:textColor="@android:color/background_dark"
-        android:textSize="15sp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/TxtGetDate"
+            android:layout_width="150dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="165dp"
+            android:textColor="#8f71ff"
+            android:textSize="20dp" />
 
-    <Button
-        android:id="@+id/second_activity_previous_button"
-        android:layout_width="110dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="400dp"
-        android:text="previous"
-        android:textColor="@android:color/background_dark"
-        android:textSize="15sp"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/retour"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="160dp"
+            android:text="Retour"
+            android:backgroundTint="#b1a7eb"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
 
 
+
+    </RelativeLayout>
 
 </RelativeLayout>
