--- a/app/src/main/res/layout/activity_historique.xml
+++ b/app/src/main/res/layout/activity_historique.xml
@@ -10,85 +10,133 @@
 
 
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:background="@drawable/card_view"
+        android:padding="30dp">
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="sans-serif-black"
+            android:text="Floussi"
+            android:textColor="#fff"
+            android:textSize="40dp"
+            android:textStyle="bold">
+
+        </TextView>
+
+
+        <RelativeLayout
+            android:id="@+id/search"
+            android:layout_width="188dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="90dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="200dp"
+            android:textColor="#f6cac1">
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Balance"
+                android:textColor="#8f71ff"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/balanceH"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="40dp"
+                android:text="$12,593"
+                android:textColor="#03082b"
+                android:textSize="40dp" />
+
+            <ImageView
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="20dp">
+
+            </ImageView>
+
+        </RelativeLayout>
+    </RelativeLayout>
+
     <TableLayout
+        android:id="@+id/tablelay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp">
+
+    </TableLayout>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/Table"
-        android:orientation="horizontal">
-        <TableRow>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Expenses"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:gravity="center">
-
-        </TextView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Prix"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:gravity="center">
-
-        </TextView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Date"
-            android:textStyle="bold"
-            android:layout_weight="1"
-            android:gravity="center">
-
-        </TextView>
-        </TableRow>
-
-        <TableRow>
-            <TextView
-                android:id="@+id/expensesHistory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                android:gravity="center">
-
-            </TextView>
-
-            <TextView
-                android:id="@+id/CostHistory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                android:gravity="center">
-
-            </TextView>
-
-            <TextView
-                android:id="@+id/DateHistory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                android:gravity="center">
-
-            </TextView>
-        </TableRow>
-        </TableLayout>
-
-    <Button
-        android:id="@+id/third_activity_previous_button"
-        android:layout_width="110dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="100dp"
         android:layout_marginTop="200dp"
-        android:text="previous"
-        android:textColor="@android:color/background_dark"
-        android:textSize="15sp"
-        android:textStyle="bold" />
+        android:padding="30dp">
+
+
+        <EditText
+            android:id="@+id/expensesU"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="12"
+            android:hint="Expenses"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/costU"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:ems="12"
+            android:hint="Cost" />
+
+        <EditText
+            android:id="@+id/whenU"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="12"
+            android:inputType="textPersonName"
+            android:layout_marginTop="100dp"
+            android:hint="When" />
+
+
+
+        <Button
+            android:id="@+id/update"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="160dp"
+            android:text="Update"
+            android:backgroundTint="#84a9fb"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/DeleteButton"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="160dp"
+            android:text="Delete"
+            android:backgroundTint="#b1a7eb"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+
+
+
+
+    </RelativeLayout>
 
 </RelativeLayout>
