--- a/app/src/main/res/layout/activity_historique.xml
+++ b/app/src/main/res/layout/activity_historique.xml
@@ -77,6 +77,14 @@
 
     </TableLayout>
 
+    <DatePicker
+        android:id="@+id/datePickerU"
+        android:layout_width="match_parent"
+        android:layout_height="226dp"
+        android:layout_marginTop="250dp"
+        android:datePickerMode="spinner"
+        android:spinnersShown="false" />
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -123,6 +131,17 @@
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/changedateU"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="270dp"
+            android:layout_marginTop="100dp"
+            android:text="Change"
+            android:backgroundTint="#b1a7eb"
+            android:textSize="10sp"
+            android:textStyle="bold" />
+
+        <Button
             android:id="@+id/DeleteButton"
             android:layout_width="100dp"
             android:layout_height="40dp"
@@ -133,7 +152,25 @@
             android:textSize="15sp"
             android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/GetDateU"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="240dp"
+            android:text="GetDate"
+            android:backgroundTint="#84a9fb"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/TxtGetDateU"
+            android:layout_width="150dp"
+            android:layout_height="90dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="245dp"
+            android:textColor="#8f71ff"
+            android:textSize="20dp" />
 
 
 
