--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:orientation = "vertical"
-    tools:context=".MainActivity"
-
-    >
-
+    tools:context="com.example.floussi.AddRevenue">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -48,7 +45,7 @@
                 android:textSize="20dp" />
 
             <TextView
-                android:id="@+id/balanceM"
+                android:id="@+id/balanceD"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -69,43 +66,76 @@
         </RelativeLayout>
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/buttonDepense"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:backgroundTint="#8f71ff"
-        android:text="Depenses" />
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="250dp"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/buttonRenenue"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:backgroundTint="#f6cac1"
-        android:text="Revenue" />
 
-    <Button
-        android:id="@+id/buttonCrypto"
+
+
+
+
+
+
+
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="300dp"
+        android:padding="30dp">
+
+
+        <EditText
+            android:id="@+id/nom2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="12"
+            android:hint="Expenses"
+            android:inputType="textPersonName" />
+
+        <EditText
+            android:id="@+id/prix2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:ems="12"
+            android:hint="Cost" />
+
+
+        <Button
+        android:id="@+id/save"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="200dp"
+        android:layout_marginTop="160dp"
+        android:text="Save"
         android:backgroundTint="#84a9fb"
-        android:text="Crypto" />
-
-    <Button
-        android:id="@+id/buttonHistory"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:backgroundTint="#b1a7eb"
-        android:text="Historique des Depenses" />
-
-    <Button
-        android:id="@+id/buttonParam"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:backgroundTint="#6bfafa"
-        android:text="Paramèters" />
+        android:textSize="15sp"
+        android:textStyle="bold" />
 
 
 
 
+        <Button
+            android:id="@+id/retour"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="160dp"
+            android:text="Retour"
+            android:backgroundTint="#b1a7eb"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
-</LinearLayout>
+
+
+
+    </RelativeLayout>
+
+</RelativeLayout>
