--- a/app/src/main/res/layout/activity_liste_revenue.xml
+++ b/app/src/main/res/layout/activity_liste_revenue.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
-    android:orientation = "vertical"
-    tools:context=".MainActivity"
-
-    >
+    tools:context=".ListeRevenue">
 
 
     <RelativeLayout
@@ -15,19 +13,6 @@
         android:layout_height="240dp"
         android:background="@drawable/card_view"
         android:padding="30dp">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="sans-serif-black"
-            android:text="Floussi"
-            android:textColor="#fff"
-            android:textSize="40dp"
-            android:textStyle="bold">
-
-        </TextView>
 
 
         <RelativeLayout
@@ -48,7 +33,7 @@
                 android:textSize="20dp" />
 
             <TextView
-                android:id="@+id/balanceM"
+                android:id="@+id/balanceD"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -66,46 +51,32 @@
 
             </ImageView>
 
+            <Button
+                android:id="@+id/is"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+
+                android:text="ADD"
+                android:backgroundTint="#0D4EDF"
+
+                android:textStyle="bold" />
+
+
         </RelativeLayout>
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/buttonDepense"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:backgroundTint="#8f71ff"
-        android:text="Depenses" />
-
-    <Button
-        android:id="@+id/buttonRenenue"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:backgroundTint="#f6cac1"
-        android:text="Revenue" />
-
-    <Button
-        android:id="@+id/buttonCrypto"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:backgroundTint="#84a9fb"
-        android:text="Crypto" />
-
-    <Button
-        android:id="@+id/buttonHistory"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:backgroundTint="#b1a7eb"
-        android:text="Historique des Depenses" />
-
-    <Button
-        android:id="@+id/buttonParam"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:backgroundTint="#6bfafa"
-        android:text="Paramèters" />
+        android:layout_height="515dp"
+        android:layout_marginTop="300dp"
+        android:padding="10dp">
 
 
+        <ListView
+            android:id="@+id/lst"
+            android:layout_width="402dp"
+            android:layout_height="421dp" />
 
 
-
-</LinearLayout>
+    </RelativeLayout>
+</RelativeLayout>
